hphp/hack/test/typecheck/invariant_false.php.like_types.exp
File "invariant_false.php", line 4, characters 20-58:
Invalid argument (Typing[4110])
File "printf.hhi", line 133, characters 30-56:
Expected ~HH\FormatString<~PlainSprintf> because it is an unenforceable type
File "invariant_false.php", line 4, characters 20-58:
But got string
