hphp/hack/test/typecheck/invariant_false.php
<?hh // strict

function test(): int {
  invariant(false, 'This should be an invariant violation');
}
